Fixed multiple errors in the code:     - construct_local_vectors was using wrong dimensions, which was causing qpu_vec to have wrong dimensions     - L_mf_q_dot is now a method inside of class Agent, and it calls L_l_q_dot for each agent.     - each Agent's L_l_q_dot method must be defined as a sub method of L_mf_q_dot.  this will cause a lot of redundant code, but then we only need to keep CDI for each agent.     - p_mf is of dimension local state_dim     - in fact, everything in q_s, p_l, p_mf, are all of dimension local state_dim

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -275,7 +275,31 @@
     "\n",
     "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
     "        q_H_mf_u_dot = q_s + p_mf\n",
-    "        return np.concatenate([q_H_mf_u_dot])\n"
+    "        return np.concatenate([q_H_mf_u_dot])\n",
+    "\n",
+    "    def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
+    "        # q_mf_dot, q_mf (inputs) here will be vectors with ALL of the states\n",
+    "        # u_mf is a vector of ALL of the controls\n",
+    "        # extract q_s from q_mf\n",
+    "        \n",
+    "        # note that these methods must return vectors that are of local dimension - state_dim - even though they take in vectors of dimension for all the states\n",
+    "        # the user needs to be aware of the indices the correspond to each state\n",
+    "        \n",
+    "        def L_l_q_dot_agent_1(q_mf, q_mf_dot, u_mf):\n",
+    "            return np.array(q_mf[0])\n",
+    "        \n",
+    "        def L_l_q_dot_agent_2(q_mf, q_mf_dot, u_mf):\n",
+    "            return np.array(q_mf[1])\n",
+    "        \n",
+    "        L_mf_total_q_dot = np.zeros(self.state_dim)\n",
+    "\n",
+    "        # agent 1\n",
+    "        L_mf_total_q_dot += L_l_q_dot_agent_1(q_mf, q_mf_dot, u_mf)\n",
+    "\n",
+    "        # agent 2\n",
+    "        L_mf_total_q_dot += L_l_q_dot_agent_2(q_mf, q_mf_dot, u_mf)\n",
+    "        assert np.shape(L_mf_total_q_dot)[0] == self.state_dim, 'dimensions of L_mf_total_q_dot must match those of the local state, currently the dimensions are ' +str(np.shape(L_mf_total_q_dot)[0])\n",
+    "        return L_mf_total_q_dot"
    ]
   },
   {
@@ -465,7 +489,32 @@
     "\n",
     "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
     "        q_H_mf_u_dot = q_s + p_mf\n",
-    "        return np.concatenate([q_H_mf_u_dot])\n"
+    "        return np.concatenate([q_H_mf_u_dot])\n",
+    "\n",
+    "    def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
+    "        # q_mf_dot, q_mf (inputs) here will be vectors with ALL of the states\n",
+    "        # u_mf is a vector of ALL of the controls\n",
+    "        # extract q_s from q_mf\n",
+    "        \n",
+    "        # note that these methods must return vectors that are of local dimension - state_dim - even though they take in vectors of dimension for all the states\n",
+    "        # the user needs to be aware of the indices the correspond to each state\n",
+    "\n",
+    "        def L_l_q_dot_agent_1(q_mf, q_mf_dot, u_mf):\n",
+    "            return np.concatenate([np.array([q_mf[0]]),np.array([q_mf[1]])])\n",
+    "        \n",
+    "        def L_l_q_dot_agent_2(q_mf, q_mf_dot, u_mf):\n",
+    "            return np.concatenate([np.array([q_mf[0]]),np.array([q_mf[1]])])\n",
+    "        \n",
+    "        L_mf_total_q_dot = np.zeros(self.state_dim)\n",
+    "\n",
+    "        # agent 1\n",
+    "        L_mf_total_q_dot += L_l_q_dot_agent_1(q_mf, q_mf_dot, u_mf)\n",
+    "\n",
+    "        # agent 2\n",
+    "        L_mf_total_q_dot += L_l_q_dot_agent_2(q_mf, q_mf_dot, u_mf)\n",
+    "\n",
+    "        assert np.shape(L_mf_total_q_dot)[0] == self.state_dim, 'dimensions of L_mf_total_q_dot must match those of the local state, currently the dimensions are ' +str(np.shape(L_mf_total_q_dot)[0])\n",
+    "        return L_mf_total_q_dot"
    ]
   },
   {
@@ -527,23 +576,23 @@
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "            q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = sliding_window(agent)\n",
     "\n",
-    "    def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
-    "        # q_mf_dot, q_mf (inputs) here will be vectors with ALL of the states\n",
-    "        # u_mf is a vector of ALL of the controls\n",
-    "        # extract q_s from q_mf\n",
-    "        L_mf_total_q_dot = 0\n",
-    "        for agent in self.agents:\n",
-    "            # Evaluate L_q_dot for each of the agents\n",
-    "            # Remember L_l_q_dot only takes in the local variables.  So, need to know the indices in q_mf which correspond to \n",
-    "            #...the states pertaining to this agent\n",
-    "            q_s = np.array([q_mf[agent.state_indices[state_ix-1]-1] for state_ix in agent.state_indices])\n",
-    "            q_s_dot = np.array([q_mf_dot[agent.state_indices[state_ix-1]-1] for state_ix in agent.state_indices])\n",
-    "            u_s = np.array([u_mf[agent.control_indices[control_ix-1]-1] for control_ix in agent.control_indices])\n",
+    "#     def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
+    "#         # q_mf_dot, q_mf (inputs) here will be vectors with ALL of the states\n",
+    "#         # u_mf is a vector of ALL of the controls\n",
+    "#         # extract q_s from q_mf\n",
+    "#         L_mf_total_q_dot = 0\n",
+    "#         for agent in self.agents:\n",
+    "#             # Evaluate L_q_dot for each of the agents\n",
+    "#             # Remember L_l_q_dot only takes in the local variables.  So, need to know the indices in q_mf which correspond to \n",
+    "#             #...the states pertaining to this agent\n",
+    "#             q_s = np.array([q_mf[agent.state_indices[state_ix-1]-1] for state_ix in agent.state_indices])\n",
+    "#             q_s_dot = np.array([q_mf_dot[agent.state_indices[state_ix-1]-1] for state_ix in agent.state_indices])\n",
+    "#             u_s = np.array([u_mf[agent.control_indices[control_ix-1]-1] for control_ix in agent.control_indices])\n",
     "    \n",
-    "            L_l_q_dot = agent.L_l_q_dot(q_s, q_s_dot, u_s)\n",
-    "            L_mf_total_q_dot = L_mf_total_q_dot + L_l_q_dot\n",
+    "#             L_l_q_dot = agent.L_l_q_dot(q_s, q_s_dot, u_s)\n",
+    "#             L_mf_total_q_dot = L_mf_total_q_dot + L_l_q_dot\n",
     "            \n",
-    "        return L_mf_total_q_dot\n",
+    "#         return L_mf_total_q_dot\n",
     "\n",
     "    def H_mf(self, q_mf, p_mf, u_mf, agent):\n",
     "        # agent is an object of class agent.  It's the agent for which we are constructing H_mf.\n",
@@ -646,20 +695,10 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "myAgent2.state_indices"
+    "bb.update_q_p_u_dict(myAgent)\n",
+    "bb.update_q_p_u_dict(myAgent2)"
    ]
   },
   {
@@ -670,24 +709,12 @@
    },
    "outputs": [],
    "source": [
-    "bb.update_q_p_u_dict(myAgent)\n",
-    "bb.update_q_p_u_dict(myAgent2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "q_p_u_dict = bb.q_p_u_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -702,7 +729,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -723,28 +750,6 @@
    "source": [
     "agents = [myAgent, myAgent2]\n",
     "sync = Synchronizer(agents, bb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Synchronizer instance at 0x104cefb90>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sync"
    ]
   },
   {
@@ -772,29 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Agent instance at 0x104bf7cb0>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myAgent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -805,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -831,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -869,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -880,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -891,7 +874,7 @@
        "[('1', 0), ('2', 2)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -937,7 +920,7 @@
     "    # Read from blackboard to get the following observations measured at time t_0\n",
     "    q_s_0, q_s_dot_0, u_s_0 = construct_local_vectors(sliding_window_instance)\n",
     "    q_mf, q_mf_dot, u_mf = construct_mf_vectors(sliding_window_instance)\n",
-    "    \n",
+    "\n",
     "    # now pick out the individual states that we need to make q_s and q_s_dot\n",
     "    qpu_vec = sliding_window_instance.qpu_vec\n",
     "    state_dim = sliding_window_instance.state_dim\n",
@@ -964,16 +947,12 @@
     "    H_l_D_0 = sliding_window_instance.H_l_D(q_l_D_0, p_l_D_0)\n",
     "    \n",
     "    # setup initial condition for p_mf\n",
-    "    p_mf_0 = sliding_window_instance.L_l_q_dot(q_mf, q_mf_dot, u_mf)\n",
+    "    p_mf_0 = sliding_window_instance.L_mf_q_dot(q_mf, q_mf_dot, u_mf)\n",
     "    \n",
     "    # now construct qpu_vec \n",
-    "    sliding_window_instance.qpu_vec =  np.concatenate([q_s_0, p_l_0, p_mf_0, u_s_0]) # fill in with blackboard values for q and u, but for p, must be computed    \n",
-    "    \n",
+    "    sliding_window_instance.qpu_vec = np.concatenate([q_s_0, p_l_0, p_mf_0, u_s_0]) # fill in with blackboard values for q and u, but for p, must be computed\n",
     "    # Construct local Hamiltonian of agent i\n",
     "    lambdas = sliding_window_instance.compute_lambdas(q_s_0, p_l_0, u_s_0)\n",
-    "    \n",
-    "    # fill in qpu_vec with values from the blackboard, and then assign them to attribute sliding_window_instance\n",
-    "    sliding_window_instance.qpu_vec = np.hstack([q_s_0, p_l_0, p_mf_0, u_s_0])\n",
     "\n",
     "    while t < sliding_window_instance.t_terminal:\n",
     "        \n",
@@ -999,7 +978,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent.qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1010,7 +1011,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 7 values when it comes out of \n",
+    "# 7 values when it comes out of propagate_dynamics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 2., 0.])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent.qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# find out whether the dimensions of qpu_vec are absolutely correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
