NOw we  return the window for which the values will be implemented, in addition to the weighted average values.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -98,16 +98,16 @@
     "        self.state_dim = 1\n",
     "        self.Gamma = 1\n",
     "        self.gamma = 1  # function is inputted by the user to compute this.\n",
-    "        self.sync = None # gets Synchronizer class is initialized\n",
+    "        self.sync = None # gets filled in when Synchronizer class is initialized\n",
     "\n",
     "        # Inputs for numerical integration\n",
-    "        self.integrateTol = 10**-3\n",
-    "        self.integrateMaxIter = 40\n",
+    "        self.integrateTol = 10**-5\n",
+    "        self.integrateMaxIter = 400\n",
     "\n",
     "        # Inputs for sliding window\n",
     "        self.t_0 = 0 \n",
     "        self.T =  2\n",
-    "        self.K=1 \n",
+    "        self.K=10\n",
     "\n",
     "        self.t_terminal = 4\n",
     "        self.n_s = 10\n",
@@ -342,13 +342,13 @@
     "        self.sync = None # gets Synchronizer class is initialized\n",
     "        \n",
     "        # Inputs for numerical integration\n",
-    "        self.integrateTol = 10**-3\n",
-    "        self.integrateMaxIter = 40\n",
+    "        self.integrateTol = 10**-5\n",
+    "        self.integrateMaxIter = 400\n",
     "\n",
     "        # Inputs for sliding window\n",
     "        self.t_0 = 0\n",
     "        self.T = 2\n",
-    "        self.K = 1\n",
+    "        self.K = 10\n",
     "\n",
     "        self.t_terminal = 2\n",
     "        self.n_s = 10\n",
@@ -777,17 +777,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# print stop"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": false,
@@ -796,7 +785,7 @@
    "outputs": [],
    "source": [
     "# forgot to pass in 'u_s' as a keyword argument\n",
-    "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
+    "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us, window = propagate_dynamics(myAgent)\n",
     "# forgot to pass in 'u_s' as a keyword argument\n",
     "# qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
    ]
@@ -823,7 +812,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.])] [array([0.])] [array([0.])] [array([-1.])]\n"
+      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.])] [array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.])] [array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.]), array([0.])] [array([-0.1]), array([-0.2]), array([-0.3]), array([-0.4]), array([-0.5]), array([-0.6]), array([-0.7]), array([-0.8]), array([-0.9]), array([-1.]), array([-1.1]), array([-1.2]), array([-1.3]), array([-1.4]), array([-1.5]), array([-1.6]), array([-1.7]), array([-1.8]), array([-1.9])]\n"
      ]
     }
    ],
@@ -885,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -914,7 +903,7 @@
     "    '''\n",
     "    \n",
     "    t_0, T, K, state_dim,t_terminal = sliding_window_instance.t_0, sliding_window_instance.T, sliding_window_instance.K,  sliding_window_instance.state_dim, sliding_window_instance.t_terminal\n",
-    "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = [], [], [], []\n",
+    "    q_ls_bars, p_ls_bars, p_mfs_bars, u_bars, windows = [], [], [], [], []\n",
     "    t = t_0 # wall clock time\n",
     "    \n",
     "    # Read from blackboard to get the following observations measured at time t_0\n",
@@ -961,69 +950,25 @@
     "\n",
     "        # this propagates a single window\n",
     "        # inside of propagate dynamics\n",
-    "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(sliding_window_instance)\n",
+    "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us, window = propagate_dynamics(sliding_window_instance)\n",
     "        # qs, ps, and us will go to Mean Field somehow\n",
     "        \n",
     "        q_ls_bars.append(q_ls_bar)\n",
     "        p_ls_bars.append(p_ls_bar)\n",
     "        p_mfs_bars.append(p_mfs_bar)\n",
     "        u_bars.append(u_bar)\n",
+    "        windows.append(window)\n",
     "\n",
     "        t+=1\n",
     "    # update blackboard\n",
     "    bb.update_q_p_u_dict(sliding_window_instance)\n",
     "    \n",
-    "    return q_ls_bars, p_ls_bars, p_mfs_bars, u_bars\n"
+    "    return q_ls_bars, p_ls_bars, p_mfs_bars, u_bars, windows\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myAgent.qpu_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "q_ls_bars, p_ls_bars, p_mfs_bars, u_bars = sliding_window(myAgent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 7 values when it comes out of \n",
-    "# 7 values when it comes out of propagate_dynamics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1034,7 +979,7 @@
        "array([0., 0., 2., 0.])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,22 +990,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# find out whether the dimensions of qpu_vec are absolutely correct"
+    "q_ls_bars, p_ls_bars, p_mfs_bars, u_bars, windows = sliding_window(myAgent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-d70db86759c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msync\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-85702b5c8ebd>\u001b[0m in \u001b[0;36msynchronize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     25\u001b[0m             '''\n\u001b[1;32m     26\u001b[0m             \u001b[0;31m# run propagation with keyword arguments state_dim_l, state_dim_mf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m             \u001b[0mq_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_ls_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mfs_bars\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_bars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;31m#     def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack"
+     ]
+    }
+   ],
    "source": [
     "sync.synchronize()"
    ]
